feat(index): ✨  Show image use

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
       <article role="doc-introduction">
         <h2>List</h2>
 
+        <img
+          src="/placeholder.jpg"
+          loading="lazy"
+          alt="…"
+          class="u-img hero-image"
+          width="1024"
+          height="1024"
+        />
+
         <p>_REPLACE_INTRODUCTION_</p>
       </article>
 
